--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,9 @@
 		<!--[if IE]>
 			<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
+
+
+		<!-- CYTECH HEADER -->
 		
 		<div class="cy-slider">
 			<div class="cy-slider-circle-wrapper"></div>
@@ -39,10 +42,9 @@
 					<div class="cy-logo cy-slide-waves-center">
 						<div class="cy-logo-circle-1 indigo darken-2"></div>
 						<div class="cy-logo-circle-2 blue"></div>
-						<div class="cy-logo-circle-3 blue-grey lighten-3">
-							<div class="cy-logo-circle-3-1 blue"></div>
-							<span class="cy-logo-c-letter">C</span>
-						</div>
+						<div class="cy-logo-circle-3 blue-grey lighten-3"></div>
+						<div class="cy-logo-circle-3-1 blue"></div>							
+						<span class="cy-logo-c-letter">C</span>
 						<div class="cy-logo-circle-4"></div>
 						<span class="cy-logo-y-letter">Y</span>
 						<span class="cy-logo-tech-letter">TECH</span>
@@ -76,10 +78,9 @@
 					<div class="cy-logo cy-slide-waves-center">
 						<div class="cy-logo-circle-1 indigo darken-2"></div>
 						<div class="cy-logo-circle-2 blue"></div>
-						<div class="cy-logo-circle-3 blue-grey lighten-3">
-							<div class="cy-logo-circle-3-1 blue"></div>
-							<span class="cy-logo-c-letter">C</span>
-						</div>
+						<div class="cy-logo-circle-3 blue-grey lighten-3"></div>
+						<div class="cy-logo-circle-3-1 blue"></div>							
+						<span class="cy-logo-c-letter">C</span>
 						<div class="cy-logo-circle-4"></div>
 						<span class="cy-logo-y-letter">Y</span>
 					</div>			
@@ -124,9 +125,55 @@
 				</div>
 			</div>
 
-			<button class="btn-large btn-floating waves-effect white">
+			<a href="#1st-section" class="cy-header-fab btn-large btn-floating waves-effect white">
 				<i class="material-icons indigo-text">keyboard_arrow_down</i>
-			</button>
+			</a>
+		</div>
+
+		<!-- END - CYTECH HEADER -->
+
+
+		<!-- CYTECH TOOLBAR -->
+		<div class="cy-toolbar cy-toolbar-expanded white z-depth-1">
+			<div class="cy-toolbar-cool-icons">
+				<div class="cy-toolbar-cool-icon">
+					<i class="material-icons blue-text">desktop_mac</i>
+					<h4 class="blue-text">web</h4>
+				</div>
+
+				<div class="cy-toolbar-cool-icon">
+					<i class="material-icons pink-text">phone</i>
+					<h4 class="pink-text">mobile</h4>
+				</div>
+
+				<div class="cy-toolbar-cool-icon">
+					<i class="material-icons green-text">desktop_mac</i>
+					<h4 class="green-text">web</h4>
+				</div>
+			</div>
+		</div>
+		<!-- END - CYTECH TOOLBAR -->
+
+		<div class="cy-section scrollspy black cy-stretch-wrapper" id="1st-section">
+				<div class="cy-section-group-1">
+					
+				</div>
+
+				<div class="cy-section-group-1">
+					<h1 class="white-text">Dev Web</h1>
+				</div>
+			</div>
+		</div>
+
+		<div class="cy-section scrollspy black cy-stretch-wrapper" id="1st-section">
+				<div class="cy-section-group-1">
+					
+				</div>
+
+				<div class="cy-section-group-1">
+					<h1 class="white-text">Dev Web</h1>
+				</div>
+			</div>
 		</div>
 		
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -149,6 +196,7 @@
 		
 		<!-- build:js scripts/main.js -->
 		<script src="scripts/slider.js"></script>
+		<script src="scripts/toolbar.js"></script>
 		<script src="scripts/main.js"></script>
 		<!-- endbuild -->
 	</body>
