--- a/app/index.html
+++ b/app/index.html
@@ -193,7 +193,7 @@
 				</div>
 			</div>
 
-			<a href="#1st-section" class="cy-header-fab btn-large btn-floating waves-effect white">
+			<a href="#cy-section-web" class="cy-header-fab btn-large btn-floating waves-effect white">
 				<i class="material-icons indigo-text">keyboard_arrow_down</i>
 			</a>
 		</div>
@@ -205,52 +205,46 @@
 		<div class="cy-toolbar cy-toolbar-expanded white z-depth-1">
 
 			<div class="cy-toolbar-cool-icons">
-				<a href="#!" class="cy-toolbar-cool-icon cy-toolbar-menu">
+				<a href="#cy-section-web" class="cy-toolbar-cool-icon cy-toolbar-menu 1">
 					<i class="mdi mdi-web blue-text"></i>
-					<h4 class="blue-text">web</h4>
+					<span class="blue-text">web</span>
 				</a>
 
-				<a href="#!" class="cy-toolbar-cool-icon cy-toolbar-menu">
+				<a href="#cy-section-mobile" class="cy-toolbar-cool-icon cy-toolbar-menu 2">
 					<i class="mdi mdi-cellphone blue-grey-text"></i>
-					<h4 class="blue-grey-text">mobile</h4>
+					<span class="blue-grey-text">mobile</span>
 				</a>
 
-				<a href="#!" class="cy-toolbar-cool-icon cy-toolbar-menu">
+				<a href="#cy-section-visual" class="cy-toolbar-cool-icon cy-toolbar-menu 3">
 					<i class="mdi mdi-palette teal-text"></i>
-					<h4 class="teal-text">Visual</h4>
+					<span class="teal-text">Visual</span>
 				</a>
 
-				<a href="#!" class="cy-toolbar-cool-icon cy-toolbar-menu">
+				<a href="#cy-section-hibrid" class="cy-toolbar-cool-icon cy-toolbar-menu 4">
 					<i class="mdi mdi-responsive pink-text"></i>
-					<h4 class="pink-text">hibrid</h4>
+					<span class="pink-text">hibrid</span>
 				</a>
 
-				<a href="#!" class="cy-toolbar-cool-icon cy-toolbar-menu">
+				<a href="#cy-section-seo" class="cy-toolbar-cool-icon cy-toolbar-menu 5">
 					<i class="mdi mdi-search-web green-text"></i>
-					<h4 class="green-text">SEO</h4>
-				</div>
+					<span class="green-text">SEO</span>
+				</a>
 			</div>
 		</div>
 		<!-- END - CYTECH TOOLBAR -->
 
-		<div class="cy-section scrollspy black cy-stretch-wrapper" id="1st-section">
+		<div id="cy-section-web" class="cy-section scrollspy blue-grey darken-4 cy-stretch-wrapper 1st-section">
 				<div class="cy-section-group-1">
-					
+					<img src="images/web.png" width="240" alt="section web">
 				</div>
 
 				<div class="cy-section-group-1">
-					<h1 class="white-text">Dev Web</h1>
-				</div>
-			</div>
-		</div>
-
-		<div class="cy-section scrollspy black cy-stretch-wrapper" id="1st-section">
-				<div class="cy-section-group-1">
-					
-				</div>
-
-				<div class="cy-section-group-1">
-					<h1 class="white-text">Dev Web</h1>
+					<div>
+						<h1 class="cy-section-title white-text">Web</h1>
+						<p class="cy-section-text white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus bibendum lorem sed vestibulum.</p>
+						<div id="web-text" class="cy-section-extra-text"><p class="cy-section-text white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus bibendum lorem sed vestibulum.</p></div>
+						<button class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#web-text" data-expanded-text="ver menos">ver mais</button>						
+					</div>
 				</div>
 			</div>
 		</div>
@@ -270,6 +264,7 @@
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/modernizr/modernizr.js"></script>
 		<script src="/bower_components/materialize/bin/materialize.js"></script>
+		<script src="/bower_components/waypoints/lib/noframework.waypoints.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 		
