--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>landing page</title>
+		<title translate>page_name</title>
 
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<!-- Place favicon.ico in the root directory -->
@@ -48,8 +48,10 @@
 						<span class="cy-logo-c-letter">C</span>
 						<div class="cy-logo-circle-4"></div>
 						<span class="cy-logo-y-letter">Y</span>
-						<span class="cy-logo-tech-letter">TECH</span>
+						<span class="cy-logo-tech-letter hide-on-small-only">TECH</span>
 					</div>			
+					<h1 class="hide-on-med-and-up white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2000ms">cytech_name</h1>
+
 				</div>
 
 				<div class="cy-slide-content-horizontal-3 hide-on-med-and-down">
@@ -130,9 +132,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="cy-slide" data-color="#1A237E">
+			<div class="cy-slide" data-color="#C51162">
 				<div class="cy-slide-content-horizontal-1">
-					<div class="cy-logo cy-slide-waves-center">
+					<div class="cy-logo cy-slide-waves-center hide-on-small-only">
 						<div class="cy-logo-circle-1 indigo darken-2"></div>
 						<div class="cy-logo-circle-2 blue"></div>
 						<div class="cy-logo-circle-3 blue-grey lighten-3"></div>
@@ -141,55 +143,35 @@
 						<div class="cy-logo-circle-4"></div>
 						<span class="cy-logo-y-letter">Y</span>
 					</div>			
-					<div>
-						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2000ms">Olá!</h1>
-						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2300ms">Somos a</h1>
-						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2600ms">Cytech</h1>
+					<div class="cy-slide-waves-center">
+						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2000ms">slide_1_text_1</h1>
+						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2300ms">slide_1_text_2</h1>
+						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2600ms">slide_1_text_3</h1>
 					</div>
 				</div>
 			</div>
 
-			<div class="cy-slide" data-color="#1A237E">
+			<div class="cy-slide" data-color="#4A148C">
 				<div class="cy-slide-content-horizontal-1">
 					<div class="cy-slide-waves-center center-align">
-						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2000ms">Somos apaixonados por novas ideias!</h1>
-						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2300ms">Qual a sua?</h1>
-						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2600ms">Que tal torna-la real?</h1>
+						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2000ms">slide_2_text_1</h1>
+						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2300ms">slide_2_text_2</h1>
+						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2600ms">slide_2_text_3</h1>
 					</div>
 				</div>
 			</div>
 
-			<div class="cy-slide" data-color="#1A237E">
-				<div class="cy-slide-content-horizontal-1">
-					<div class="right-align">
-						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2000ms">Ficará lindo em um site!</h1>
-						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2300ms">Ou quem sabe em um aplicativo?</h1>
-						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2600ms">Ou em ambos?</h1>
-					</div>
+			<div class="cy-slide" data-color="#004D40">
+				<div class="cy-slide-content-horizontal-1 cy-bottom-gravity hide-on-small-only">
+					<img class="cy-slide-waves-center hide-on-small-only" src="images/coffee-top.png" width="360" alt="coffee">
 				</div>
 				<div class="cy-slide-content-horizontal-1">
-					<!-- CYTECH DEVICE IMAC -->
-					<div class="cy-device-imac cy-device-autochange cy-slide-waves-center">
-
-						<div class="cy-device-screen white">
-							<div class="cy-device-innerscreen grey darken-4">
-								<div class="cy-device-camera"></div>
-								<div class="cy-device-soundbox"></div>
-								<div class="cy-device-innerinnerscreen blue-grey darken-4">
-									<img src="http://lorempixel.com/400/400" alt="">
-								</div>
-							</div>
-						</div>
-
-						<div class="cy-device-button"></div>
-
-						<div class="cy-device-extra-1 white"></div>
-						<div class="cy-device-extra-2 white"></div>
-						<div class="cy-device-extra-3 white"></div>
-						
+					<div class="center-align cy-slide-waves-center">
+						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2000ms">slide_3_text_1</h1>
+						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2300ms">slide_3_text_2</h1>
+						<h1 class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2300ms">slide_3_text_3</h1>
+						<a class="cy-slide-btn btn btn-large blue accent-2 cy-anim-appear-from-down cy-anim-for-2600ms" href="#contact">contact_us_btn</a>
 					</div>
-
-					<!-- END - CYTECH DEVICE IMAC -->
 				</div>
 			</div>
 
@@ -206,48 +188,148 @@
 
 			<div class="cy-toolbar-cool-icons">
 				<a href="#cy-section-web" class="cy-toolbar-cool-icon cy-toolbar-menu 1">
-					<i class="mdi mdi-web blue-text"></i>
-					<span class="blue-text">web</span>
+					<i class="mdi mdi-web blue-grey-text"></i>
+					<span translate class="blue-grey-text">menu_web</span>
 				</a>
 
 				<a href="#cy-section-mobile" class="cy-toolbar-cool-icon cy-toolbar-menu 2">
-					<i class="mdi mdi-cellphone blue-grey-text"></i>
-					<span class="blue-grey-text">mobile</span>
+					<i class="mdi mdi-cellphone blue-text"></i>
+					<span translate class="blue-text">menu_mobile</span>
 				</a>
 
 				<a href="#cy-section-visual" class="cy-toolbar-cool-icon cy-toolbar-menu 3">
 					<i class="mdi mdi-palette teal-text"></i>
-					<span class="teal-text">Visual</span>
+					<span translate class="teal-text">menu_visual</span>
 				</a>
 
 				<a href="#cy-section-hibrid" class="cy-toolbar-cool-icon cy-toolbar-menu 4">
 					<i class="mdi mdi-responsive pink-text"></i>
-					<span class="pink-text">hibrid</span>
+					<span translate class="pink-text">menu_hibrid</span>
 				</a>
 
 				<a href="#cy-section-seo" class="cy-toolbar-cool-icon cy-toolbar-menu 5">
 					<i class="mdi mdi-search-web green-text"></i>
-					<span class="green-text">SEO</span>
+					<span translate class="green-text">menu_seo</span>
 				</a>
 			</div>
 		</div>
 		<!-- END - CYTECH TOOLBAR -->
 
 		<div id="cy-section-web" class="cy-section scrollspy blue-grey darken-4 cy-stretch-wrapper 1st-section">
-				<div class="cy-section-group-1">
-					<img src="images/web.png" width="240" alt="section web">
-				</div>
+			<div class="cy-section-group-1 hide-on-small-only">
+				<img src="images/web.png" width="240" alt="section web">
+			</div>
 
-				<div class="cy-section-group-1">
-					<div>
-						<h1 class="cy-section-title white-text">Web</h1>
-						<p class="cy-section-text white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus bibendum lorem sed vestibulum.</p>
-						<div id="web-text" class="cy-section-extra-text"><p class="cy-section-text white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus bibendum lorem sed vestibulum.</p></div>
-						<button class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#web-text" data-expanded-text="ver menos">ver mais</button>						
-					</div>
+			<div class="cy-section-group-1">
+				<div>
+					<h1 translate class="cy-section-title white-text">section_web_title</h1>
+					<p translate class="cy-section-text white-text">section_web_text</p>
+					<div id="web-text" class="cy-section-extra-text"><p translate class="cy-section-text white-text">section_web_extra_text</p></div>
+					<button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#web-text" data-expanded-text="see_less_btn">see_more_btn</button>						
 				</div>
 			</div>
 		</div>
+
+		<div id="cy-section-mobile" class="cy-section scrollspy blue darken-4 cy-stretch-wrapper">
+			<div class="cy-section-group-1">
+				<div>
+					<h1 translate class="cy-section-title white-text">section_mobile_title</h1>
+					<p translate class="cy-section-text white-text">section_mobile_text</p>
+					<div id="mobile-text" class="cy-section-extra-text"><p translate class="cy-section-text white-text">section_mobile_extra_text</p></div>
+					<button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#mobile-text" data-expanded-text="see_less_btn">see_more_btn</button>						
+				</div>
+			</div>
+			<div class="cy-section-group-1 hide-on-small-only">
+				<img src="images/mobile.png" width="400" alt="section mobile">
+			</div>
+		</div>
+
+		<div id="cy-section-visual" class="cy-section scrollspy teal darken-4 cy-stretch-wrapper">
+			<div class="cy-section-group-1 hide-on-small-only">
+				<img src="images/visual.png" width="400" alt="section mobile">
+			</div>
+			<div class="cy-section-group-1">
+				<div>
+					<h1 translate class="cy-section-title white-text">section_visual_title</h1>
+					<p translate class="cy-section-text white-text">section_visual_text</p>
+					<div id="visual-text" class="cy-section-extra-text"><p translate class="cy-section-text white-text">section_visual_extra_text</p></div>
+					<button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#visual-text" data-expanded-text="see_less_btn">see_more_btn</button>						
+				</div>
+			</div>
+		</div>
+
+		<div id="cy-section-hibrid" class="cy-section scrollspy pink darken-4 cy-stretch-wrapper">
+			<div class="cy-section-group-1">
+				<div>
+					<h1 translate class="cy-section-title white-text">section_hibrid_title</h1>
+					<p translate class="cy-section-text white-text">section_hibrid_text</p>
+					<div id="hibrid-text" class="cy-section-extra-text"><p translate class="cy-section-text white-text">section_hibrid_extra_text</p></div>
+					<button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#hibrid-text" data-expanded-text="see_less_btn">see_more_btn</button>						
+				</div>
+			</div>
+			<div class="cy-section-group-1 hide-on-small-only">
+				<div>
+					<!-- CYTECH DEVICE IMAC -->
+					<div class="cy-device-imac cy-device-auto-change">
+
+						<div class="cy-device-screen grey darken-4">
+							<div class="cy-device-innerscreen grey darken-4">
+								<div class="cy-device-camera"></div>
+								<div class="cy-device-soundbox"></div>
+								<div class="cy-device-innerinnerscreen blue-grey darken-4">
+									<img src="http://lorempixel.com/400/400" alt="">
+								</div>
+							</div>
+						</div>
+
+						<div class="cy-device-button grey darken-3"></div>
+
+						<div class="cy-device-extra-1 grey darken-4"></div>
+						<div class="cy-device-extra-2 grey darken-4"></div>
+						<div class="cy-device-extra-3 grey darken-4"></div>
+						
+					</div>
+
+					<!-- END - CYTECH DEVICE IMAC -->
+				</div>
+			</div>
+
+		</div>
+
+		<div id="cy-section-seo" class="cy-section scrollspy green darken-4 cy-stretch-wrapper">
+			<div class="cy-section-group-1 hide-on-small-only">
+				<img src="images/seo.png" width="400" alt="section seo">
+			</div>
+
+			<div class="cy-section-group-1">
+				<div>
+					<h1 translate class="cy-section-title white-text">section_seo_title</h1>
+					<p translate class="cy-section-text white-text">section_seo_text</p>
+					<div id="seo-text" class="cy-section-extra-text"><p translate class="cy-section-text white-text">section_seo_extra_text</p></div>
+					<button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#seo-text" data-expanded-text="see_less_btn">see_more_btn</button>						
+				</div>
+			</div>
+		</div>
+
+		<div id="cy-section-about" class="cy-section scrollspy white cy-stretch-wrapper">
+			<div class="cy-section-group-1">
+				<div>
+					<h1 translate class="cy-section-title blue-grey-text">section_about_title</h1>
+					<p translate class="cy-section-text blue-grey-text">section_about_text</p>
+					<div id="about-text" class="cy-section-extra-text"><p translate class="cy-section-text blue-grey-text">section_about_extra_text</p></div>
+					<button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#about-text" data-expanded-text="see_less_btn">see_more_btn</button>						
+				</div>
+			</div>
+
+			<div class="cy-section-group-1 hide-on-small-only cy-gravity-bottom">
+				<img src="images/coffee.png" width="600" alt="section seo">
+			</div>
+		</div>
+
+		<footer class="cy-footer black white-text">
+			<span translate>copyright</span>
+			<span translate>contact_email</span>
+		</footer>
 		
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
@@ -267,11 +349,15 @@
 		<script src="/bower_components/waypoints/lib/noframework.waypoints.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
-		
+
+
 		<!-- build:js scripts/main.js -->
+		<script src="/node_modules/locale-js/lib/i18n.js"></script>
 		<script src="scripts/slider.js"></script>
 		<script src="scripts/toolbar.js"></script>
 		<script src="scripts/devices.js"></script>
+		<script src="scripts/i18n/translations.js"></script>
+		<script src="scripts/translation.js"></script>
 		<script src="scripts/main.js"></script>
 		<!-- endbuild -->
 	</body>
