--- a/app/index.html
+++ b/app/index.html
@@ -211,6 +211,16 @@
 					<i class="mdi mdi-search-web green-text"></i>
 					<span translate class="green-text">menu_seo</span>
 				</a>
+
+				<a href="#cy-section-portfolio" class="cy-toolbar-cool-icon cy-toolbar-menu 5">
+					<i class="mdi mdi-view-grid blue-grey-text text-darken-4"></i>
+					<span translate class="blue-grey-text text-darken-4">menu_portfolio</span>
+				</a>
+
+				<a href="#cy-section-about" class="cy-toolbar-cool-icon cy-toolbar-menu 5">
+					<i class="mdi mdi-information blue-text"></i>
+					<span translate class="blue-text">menu_about</span>
+				</a>
 			</div>
 		</div>
 		<!-- END - CYTECH TOOLBAR -->
@@ -230,7 +240,7 @@
 			</div>
 		</div>
 
-		<div id="cy-section-mobile" class="cy-section scrollspy blue darken-4 cy-stretch-wrapper">
+		<div id="cy-section-mobile" class="cy-section scrollspy blue darken-1 cy-stretch-wrapper">
 			<div class="cy-section-group-1">
 				<div>
 					<h1 translate class="cy-section-title white-text">section_mobile_title</h1>
@@ -244,7 +254,7 @@
 			</div>
 		</div>
 
-		<div id="cy-section-visual" class="cy-section scrollspy teal darken-4 cy-stretch-wrapper">
+		<div id="cy-section-visual" class="cy-section scrollspy teal darken-1 cy-stretch-wrapper">
 			<div class="cy-section-group-1 hide-on-small-only">
 				<img src="images/visual.png" width="400" alt="section mobile">
 			</div>
@@ -258,7 +268,7 @@
 			</div>
 		</div>
 
-		<div id="cy-section-hibrid" class="cy-section scrollspy pink darken-4 cy-stretch-wrapper">
+		<div id="cy-section-hibrid" class="cy-section scrollspy pink darken-1 cy-stretch-wrapper">
 			<div class="cy-section-group-1">
 				<div>
 					<h1 translate class="cy-section-title white-text">section_hibrid_title</h1>
@@ -296,7 +306,7 @@
 
 		</div>
 
-		<div id="cy-section-seo" class="cy-section scrollspy green darken-4 cy-stretch-wrapper">
+		<div id="cy-section-seo" class="cy-section scrollspy green darken-1 cy-stretch-wrapper">
 			<div class="cy-section-group-1 hide-on-small-only">
 				<img src="images/seo.png" width="400" alt="section seo">
 			</div>
@@ -308,6 +318,13 @@
 					<div id="seo-text" class="cy-section-extra-text"><p translate class="cy-section-text white-text">section_seo_extra_text</p></div>
 					<button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#seo-text" data-expanded-text="see_less_btn">see_more_btn</button>						
 				</div>
+			</div>
+		</div>
+
+		<div id="cy-section-portfolio" class="cy-section scrollspy blue-grey darken-4 cy-stretch-wrapper">
+			<div class="cy-cool-grid">
+				<h1 translate class="cy-cool-grid-title cy-section-title blue-grey-text text-lighten-3">section_portfolio_title</h1>
+				<!-- Portfolio items -->
 			</div>
 		</div>
 
@@ -355,6 +372,7 @@
 		<script src="/node_modules/locale-js/lib/i18n.js"></script>
 		<script src="scripts/slider.js"></script>
 		<script src="scripts/toolbar.js"></script>
+		<script src="scripts/cool-grid.js"></script>
 		<script src="scripts/devices.js"></script>
 		<script src="scripts/i18n/translations.js"></script>
 		<script src="scripts/translation.js"></script>
