--- a/app/index.html
+++ b/app/index.html
@@ -342,17 +342,15 @@
 		</div>
 
 		<div id="cy-section-about" class="cy-section scrollspy white cy-stretch-wrapper">
-			<div class="cy-section-group-1">
+			<img src="images/coffee.png" alt="About image">
+
+			<div class="cy-section-group-1 cy-gravity-left">
 				<div>
 					<h1 translate class="cy-section-title blue-grey-text">section_about_title</h1>
 					<p translate class="cy-section-text blue-grey-text">section_about_text</p>
 					<!-- div id="about-text" class="cy-section-extra-text"><p translate class="cy-section-text blue-grey-text">section_about_extra_text</p></div -->
 					<!-- button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#about-text" data-expanded-text="see_less_btn">see_more_btn</button -->
 				</div>
-			</div>
-
-			<div class="cy-section-group-1 cy-gravity-bottom">
-				<img src="images/coffee.png" width="500" alt="section seo">
 			</div>
 		</div>
 
