--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
 		<!-- build:css styles/vendor.css -->
 		<!-- bower:css -->
 		<link rel="stylesheet" href="/bower_components/materialize/bin/materialize.css" />
+		<link rel="stylesheet" href="/bower_components/jquery-mobile-bower/css/jquery.mobile-1.4.5.css" />
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -291,7 +292,7 @@
 				</div>
 			</div>
 			<div class="cy-section-group-1">
-				<div class="devices-wrapper">
+				<div class="cy-device-wrapper">
 					<!-- CYTECH DEVICE IMAC -->
 					<div class="cy-device-imac cy-device-auto-change">
 
@@ -348,6 +349,7 @@
 				<div>
 					<h1 translate class="cy-section-title blue-grey-text">section_about_title</h1>
 					<p translate class="cy-section-text blue-grey-text">section_about_text</p>
+					<p translate class="cy-section-text blue-grey-text">contact_email</p>
 					<!-- div id="about-text" class="cy-section-extra-text"><p translate class="cy-section-text blue-grey-text">section_about_extra_text</p></div -->
 					<!-- button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#about-text" data-expanded-text="see_less_btn">see_more_btn</button -->
 				</div>
@@ -375,6 +377,7 @@
 		<script src="/bower_components/modernizr/modernizr.js"></script>
 		<script src="/bower_components/materialize/bin/materialize.js"></script>
 		<script src="/bower_components/waypoints/lib/noframework.waypoints.js"></script>
+		<script src="/bower_components/jquery-mobile-bower/js/jquery.mobile-1.4.5.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
