--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
 		<!-- build:css styles/vendor.css -->
 		<!-- bower:css -->
 		<link rel="stylesheet" href="/bower_components/materialize/bin/materialize.css" />
-		<link rel="stylesheet" href="/bower_components/jquery-mobile-bower/css/jquery.mobile-1.4.5.css" />
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -234,7 +233,18 @@
 		<!-- END - CYTECH TOOLBAR -->
 
 		<!-- CYTECH SIDENAV -->
-		<ul id="slide-out" class="side-nav"></ul>
+		<ul id="slide-out" class="side-nav">
+			<li>
+				<div class="userView">
+					<div class="background indigo">
+						<img src="images/header-bg.png">
+					</div>
+					<a href="#!user"><img class="circle" src="images/logo-v4.png"></a>
+					<a href="#!name"><span translate class="white-text name">cytech_name</span></a>
+					<a href="#!email"><span translate class="white-text email">contact_email</span></a>
+				</div>
+			</li>
+		</ul>
   		<!-- END - CYTECH SIDENAV -->
 
 
@@ -349,7 +359,18 @@
 				<div>
 					<h1 translate class="cy-section-title blue-grey-text">section_about_title</h1>
 					<p translate class="cy-section-text blue-grey-text">section_about_text</p>
-					<p translate class="cy-section-text blue-grey-text">contact_email</p>
+					
+					<p class="cy-section-text blue-grey-text">
+						<span translate>powered_by</span>: <b translate>powered_by_names</b>
+					</p>
+
+					<p class="cy-section-text blue-grey-text">
+						<span translate>email</span>: <b translate>contact_email</b>
+					</p>
+					<p class="cy-section-text blue-grey-text">
+						<span translate>phone</span>: <b translate>contact_phone</b>
+					</p>
+
 					<!-- div id="about-text" class="cy-section-extra-text"><p translate class="cy-section-text blue-grey-text">section_about_extra_text</p></div -->
 					<!-- button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#about-text" data-expanded-text="see_less_btn">see_more_btn</button -->
 				</div>
@@ -377,7 +398,6 @@
 		<script src="/bower_components/modernizr/modernizr.js"></script>
 		<script src="/bower_components/materialize/bin/materialize.js"></script>
 		<script src="/bower_components/waypoints/lib/noframework.waypoints.js"></script>
-		<script src="/bower_components/jquery-mobile-bower/js/jquery.mobile-1.4.5.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
