--- a/app/index.html
+++ b/app/index.html
@@ -170,7 +170,7 @@
 						<h1 translate class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2000ms">slide_3_text_1</h1>
 						<h1 translate class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2300ms">slide_3_text_2</h1>
 						<h1 translate class="white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2300ms">slide_3_text_3</h1>
-						<a translate class="cy-slide-btn btn btn-large blue accent-2 cy-anim-appear-from-down cy-anim-for-2600ms" href="#contact">contact_us_btn</a>
+						<a translate class="cy-slide-btn btn btn-large blue accent-2 cy-anim-appear-from-down cy-anim-for-2600ms" href="#cy-section-about">contact_us_btn</a>
 					</div>
 				</div>
 			</div>
@@ -389,7 +389,7 @@
 			e=o.createElement(i);r=o.getElementsByTagName(i)[0];
 			e.src='https://www.google-analytics.com/analytics.js';
 			r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-			ga('create','UA-XXXXX-X');ga('send','pageview');
+			ga('create','UA-101140719-1');ga('send','pageview');
 		</script>
 
 		<!-- build:js scripts/vendor.js -->
