--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="pt-BR">
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="">
+		<meta name="description" content="Somos a Cytech Informática. Nós desenvolvemos soluções de TI com foco na qualidade, oferecendo as melhores alternativas e respeitando prazos e orçamentos. Sinta-se à vontade para entrar em contato e falar sobre sua grande ideia">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title translate>page_name</title>
+		<title>Cytech Informatica</title>
 
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<!-- Place favicon.ico in the root directory -->
@@ -135,7 +135,7 @@
 			<div class="cy-slide" data-color="#C51162">
 				<div class="cy-slide-content-horizontal-1">
 					<div class="cy-logo cy-slide-waves-center hide-on-small-only">
-						<div class="cy-logo-circle-1 indigo darken-2"></div>
+						<div class="cy-logo-circle-1 indigo darken-2 cy-slide-waves-center"></div>
 						<div class="cy-logo-circle-2 blue"></div>
 						<div class="cy-logo-circle-3 blue-grey lighten-3"></div>
 						<div class="cy-logo-circle-3-1 blue"></div>							
@@ -370,10 +370,52 @@
 					<p class="cy-section-text blue-grey-text">
 						<span translate>phone</span>: <b translate>contact_phone</b>
 					</p>
+					
+					<div class="cy-section-text blue-grey-text">
+						<div class="fb-like" data-href="https://www.facebook.com/CytechInformatica/" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+					</div>
 
 					<!-- div id="about-text" class="cy-section-extra-text"><p translate class="cy-section-text blue-grey-text">section_about_extra_text</p></div -->
 					<!-- button translate class="cy-btn-toggle-text btn blue waves-effect" data-to-expand="#about-text" data-expanded-text="see_less_btn">see_more_btn</button -->
 				</div>
+			</div>
+		</div>
+
+		<div id="cy-section-contact" class="cy-section scrollspy indigo cy-stretch-wrapper hide">
+			<div class="row card-panel">
+				<!-- Begin MailChimp Signup Form -->
+				<div id="mc_embed_signup" class="col s12">
+					<form action="//cytech.us16.list-manage.com/subscribe/post?u=40ac22a5cf92f1c5cb3c79288&amp;id=b2eccaf0bb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div id="mc_embed_signup_scroll row">
+							<h4 translate class="cy-section-text col s12">contact_form_title</h4>
+
+							<div class="mc-field-group">
+								<label for="mce-EMAIL">
+									<span>contact_form_email</span>  <span class="asterisk">*</span>
+								</label>
+								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+							</div>
+							<div class="mc-field-group">
+								<label for="mce-FNAME" translate>contact_form_first_name </label>
+								<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+							</div>
+							<div class="mc-field-group">
+								<label for="mce-LNAME" translate>contact_form_last_name </label>
+								<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+							</div>
+							<div id="mce-responses" class="clear">
+								<div class="response" id="mce-error-response" style="display:none"></div>
+								<div class="response" id="mce-success-response" style="display:none"></div>
+							</div>    
+							
+							<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_40ac22a5cf92f1c5cb3c79288_b2eccaf0bb" tabindex="-1" value=""></div>
+							<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+						</div>
+					</form>
+				</div>
+
+				<!--End mc_embed_signup-->
 			</div>
 		</div>
 
@@ -390,6 +432,18 @@
 			e.src='https://www.google-analytics.com/analytics.js';
 			r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
 			ga('create','UA-101140719-1');ga('send','pageview');
+		</script>
+
+
+		<div id="fb-root"></div>
+		<script>
+			(function(d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.9&appId=1872006676387328";
+			fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));
 		</script>
 
 		<!-- build:js scripts/vendor.js -->
