Resolvendo problema com cytech_name

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 						<span class="cy-logo-y-letter">Y</span>
 						<span class="cy-logo-tech-letter hide-on-small-only">TECH</span>
 					</div>			
-					<h1 class="hide-on-med-and-up white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2000ms">cytech_name</h1>
+					<h1 translate class="hide-on-med-and-up white-text cy-slide-strong-text cy-anim-appear-from-down cy-anim-for-2000ms">cytech_name</h1>
 
 				</div>
 
